--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="navbar shadow-lg sticky top-0 bg-opacity-90 backdrop-blur-md z-50">
         <div class="container mx-auto flex justify-between items-center py-4 px-6">
             <a href="#" class="brand text-2xl font-bold bg-gradient-to-r from-yellow-400 to-red-500 bg-clip-text text-transparent">
-                Game Showcase
+                TimePass
             </a>
             <div class="flex items-center space-x-6">
                 <p id="datetime" class="text-yellow-400 font-semibold"></p>
